Fixed wrong package name, now it runs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.31.5)
 project(umbrella-RTS)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -11,7 +11,7 @@ file(GLOB_RECURSE SOURCES "src/core/*.cpp" "src/game/*.cpp" "src/utils/*.cpp")
 add_executable(umbrella-RTS main.cpp ${SOURCES})
 
 find_package(OpenGL REQUIRED)
-find_package(GLFW REQUIRED)
+find_package(glfw3 REQUIRED)
 
 target_include_directories(umbrella-RTS PRIVATE include third_party)
 target_link_libraries(umbrella-RTS glfw OpenGL::GL)
